eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Account_Reference_Information__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Transaction_Code__c</fullName>
        <label>Credit Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Transaction_Narritive__c</fullName>
        <label>Credit Transaction Narritive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Transaction_Code__c</fullName>
        <label>Debit Transaction Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Transaction_Narritive__c</fullName>
        <label>Debit Transaction Narritive</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Credit_Account_Number__c</fullName>
        <label>IBB Credit Acc # / We Pay Funds Via</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBB_Debit_Account_Number__c</fullName>
        <label>IBB Debit Acc # / We Rec Funds From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Currency_Code__c</fullName>
        <label>ISO Currency Code</label>
        <picklist>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Debit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inter Account Transfer to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via bankers payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via CHAPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via demand draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via mail transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via payment order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via SWIFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via telegraphic transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Via telex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faster payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit: Lump sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminFeeInitial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminFeeFull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ValuationFee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminFeeFullInternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminFeeInitialInternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminFeeFullExternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminFeeInitialExternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ValuationFeeInternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ValuationFeeExternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductSwitchFee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductSwitchFeeInternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProductSwitchFeeExternalTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad hoc valuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-issue of offer letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special delivery eg overseas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Account Reference Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Payment_Type__c</columns>
        <columns>NAME</columns>
        <columns>IBB_Credit_Account_Number__c</columns>
        <columns>IBB_Debit_Account_Number__c</columns>
        <columns>Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ACR-{000000}</displayFormat>
        <label>AccountReferenceInformation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Reference Information</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>